--- a/ConsultarNotasRecoleccion.csproj
+++ b/ConsultarNotasRecoleccion.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCoreCurrentRequestContext" Version="2.0.0" />
+    <PackageReference Include="Serilog.Enrichers.HttpContextData" Version="0.1.3" />
     <PackageReference Include="SSH.NET" Version="2020.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
